gen/mainParser.java
// Generated from C:/Users/arnau/OneDrive/UdG/Quart/Compiladors/Pràctiques/Tokens\main.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class mainParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TK_WS=1, TK_COMENTARI=2, TK_LPAREN=3, TK_RPAREN=4, TK_OVECTOR=5, TK_TVECTOR=6, 
		TK_STAR=7, TK_OP_PLUS=8, TK_OP_MENYS=9, TK_OP_DIVISIO_REAL=10, TK_OP_DIVISIO_ENTERA=11, 
		TK_OP_MODUL=12, TK_OP_MENYS_UNARI=13, TK_OP_IGUALTAT=14, TK_OP_DESIGUALTAT=15, 
		TK_SEMI=16, TK_COMA=17, TK_PUNT=18, TK_PC_PROGRAMA=19, TK_PC_FPROGRAMA=20, 
		TK_PC_PERIODE=21, TK_PC_PER=22, TK_PC_FPER=23, TK_PC_DE=24, TK_PC_FINS=25, 
		TK_PC_FER=26, TK_PC_SI=27, TK_PC_FSI=28, TK_PC_LLAVORS=29, TK_PC_ALTRAMENT=30, 
		TK_PC_MENTRE=31, TK_PC_FMENTRE=32, TK_PC_LLEGIR=33, TK_PC_ESCRIURE=34, 
		TK_PC_ESCRIURELN=35, TK_PC_ACCIO=36, TK_PC_FACCIO=37, TK_PC_FUNCIO=38, 
		TK_PC_FFUNCIO=39, TK_PC_RETORNA=40, TK_PC_ENT=41, TK_PC_ENTSOR=42, TK_PC_CONSTANTS=43, 
		TK_PC_FCONSTANTS=44, TK_PC_TIPUS=45, TK_PC_FTIPUS=46, TK_PC_VECTOR=47, 
		TK_PC_MIDA=48, TK_PC_INICI=49, TK_PC_TUPLA=50, TK_PC_FTUPLA=51, TK_PC_VARIABLES=52, 
		TK_PC_FVARIABLES=53, TK_MESGRAN=54, TK_MESPETIT=55, TK_MESPETIT_IGUAL=56, 
		TK_MESGRAN_IGUAL=57, TK_NEGACIO=58, TK_AND=59, TK_OR=60, TK_INTERROGANT=61, 
		TK_DOSPUNTS=62, TK_TB_ENTER=63, TK_TB_REAL=64, TK_TB_CAR=65, TK_TB_BOOLEA=66, 
		TK_TB_DATA=67, TK_ASSIGNACIO=68, TK_BOOLEA=69, TK_DATA=70, TK_ZERO=71, 
		TK_ENTER=72, TK_IDENT=73, TK_REAL=74, TK_CAR=75, TK_STRING=76;
	public static final int
		RULE_inici = 0, RULE_blocDeclaracioConstants = 1, RULE_variableConstants = 2, 
		RULE_tipusBasic = 3, RULE_valorTipusBasic = 4, RULE_valorEnter = 5, RULE_blocDeclaracioTipus = 6, 
		RULE_tipus = 7, RULE_tipusBasicVector = 8, RULE_tipusBasicTupla = 9, RULE_campTupla = 10, 
		RULE_blocAccionsFuncions = 11, RULE_declaracioFuncio = 12, RULE_parametres = 13, 
		RULE_parametre = 14, RULE_declaracioAccio = 15, RULE_programa = 16, RULE_blocDeclaracioVariables = 17, 
		RULE_variable = 18, RULE_ifThenElse = 19, RULE_expressio = 20, RULE_expressio2 = 21, 
		RULE_operadorsBooleans = 22, RULE_expressio3 = 23, RULE_expressio4 = 24, 
		RULE_expressio5 = 25, RULE_expressio6 = 26, RULE_valor = 27, RULE_accesTupla = 28, 
		RULE_accesVector = 29, RULE_cridaFuncio = 30, RULE_sentencia = 31, RULE_asignacio = 32, 
		RULE_condicional = 33, RULE_per = 34, RULE_mentre = 35, RULE_cridaAccio = 36, 
		RULE_llegir = 37, RULE_escriure = 38, RULE_escriureln = 39, RULE_blocImplementacio = 40, 
		RULE_implementacioAccio = 41, RULE_implementacioFuncio = 42;
	private static String[] makeRuleNames() {
		return new String[] {
			"inici", "blocDeclaracioConstants", "variableConstants", "tipusBasic", 
			"valorTipusBasic", "valorEnter", "blocDeclaracioTipus", "tipus", "tipusBasicVector", 
			"tipusBasicTupla", "campTupla", "blocAccionsFuncions", "declaracioFuncio", 
			"parametres", "parametre", "declaracioAccio", "programa", "blocDeclaracioVariables", 
			"variable", "ifThenElse", "expressio", "expressio2", "operadorsBooleans", 
			"expressio3", "expressio4", "expressio5", "expressio6", "valor", "accesTupla", 
			"accesVector", "cridaFuncio", "sentencia", "asignacio", "condicional", 
			"per", "mentre", "cridaAccio", "llegir", "escriure", "escriureln", "blocImplementacio", 
			"implementacioAccio", "implementacioFuncio"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'('", "')'", "'['", "']'", "'*'", "'+'", "'-'", "'/'", 
			"'\\'", "'%'", "'~'", "'=='", "'!='", "';'", "','", "'.'", "'programa'", 
			"'fprograma'", "'periode'", "'per'", "'fper'", "'de'", "'fins'", "'fer'", 
			"'si'", "'fsi'", "'llavors'", "'altrament'", "'mentre'", "'fmentre'", 
			"'llegir'", "'escriure'", "'escriureln'", "'accio'", "'faccio'", "'funcio'", 
			"'ffuncio'", "'retorna'", "'ent'", "'entsor'", "'constants'", "'fconstants'", 
			"'tipus'", "'ftipus'", "'vector'", "'mida'", "'inici'", "'tupla'", "'ftupla'", 
			"'variables'", "'fvariables'", "'>'", "'<'", "'<='", "'>='", "'no'", 
			"'&'", "'|'", "'?'", "':'", "'enter'", "'real'", "'car'", "'boolea'", 
			"'data'", "':='", null, null, "'0'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TK_WS", "TK_COMENTARI", "TK_LPAREN", "TK_RPAREN", "TK_OVECTOR", 
			"TK_TVECTOR", "TK_STAR", "TK_OP_PLUS", "TK_OP_MENYS", "TK_OP_DIVISIO_REAL", 
			"TK_OP_DIVISIO_ENTERA", "TK_OP_MODUL", "TK_OP_MENYS_UNARI", "TK_OP_IGUALTAT", 
			"TK_OP_DESIGUALTAT", "TK_SEMI", "TK_COMA", "TK_PUNT", "TK_PC_PROGRAMA", 
			"TK_PC_FPROGRAMA", "TK_PC_PERIODE", "TK_PC_PER", "TK_PC_FPER", "TK_PC_DE", 
			"TK_PC_FINS", "TK_PC_FER", "TK_PC_SI", "TK_PC_FSI", "TK_PC_LLAVORS", 
			"TK_PC_ALTRAMENT", "TK_PC_MENTRE", "TK_PC_FMENTRE", "TK_PC_LLEGIR", "TK_PC_ESCRIURE", 
			"TK_PC_ESCRIURELN", "TK_PC_ACCIO", "TK_PC_FACCIO", "TK_PC_FUNCIO", "TK_PC_FFUNCIO", 
			"TK_PC_RETORNA", "TK_PC_ENT", "TK_PC_ENTSOR", "TK_PC_CONSTANTS", "TK_PC_FCONSTANTS", 
			"TK_PC_TIPUS", "TK_PC_FTIPUS", "TK_PC_VECTOR", "TK_PC_MIDA", "TK_PC_INICI", 
			"TK_PC_TUPLA", "TK_PC_FTUPLA", "TK_PC_VARIABLES", "TK_PC_FVARIABLES", 
			"TK_MESGRAN", "TK_MESPETIT", "TK_MESPETIT_IGUAL", "TK_MESGRAN_IGUAL", 
			"TK_NEGACIO", "TK_AND", "TK_OR", "TK_INTERROGANT", "TK_DOSPUNTS", "TK_TB_ENTER", 
			"TK_TB_REAL", "TK_TB_CAR", "TK_TB_BOOLEA", "TK_TB_DATA", "TK_ASSIGNACIO", 
			"TK_BOOLEA", "TK_DATA", "TK_ZERO", "TK_ENTER", "TK_IDENT", "TK_REAL", 
			"TK_CAR", "TK_STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "main.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public mainParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class IniciContext extends ParserRuleContext {
		public ProgramaContext programa() {
			return getRuleContext(ProgramaContext.class,0);
		}
		public BlocDeclaracioConstantsContext blocDeclaracioConstants() {
			return getRuleContext(BlocDeclaracioConstantsContext.class,0);
		}
		public BlocDeclaracioTipusContext blocDeclaracioTipus() {
			return getRuleContext(BlocDeclaracioTipusContext.class,0);
		}
		public BlocAccionsFuncionsContext blocAccionsFuncions() {
			return getRuleContext(BlocAccionsFuncionsContext.class,0);
		}
		public BlocImplementacioContext blocImplementacio() {
			return getRuleContext(BlocImplementacioContext.class,0);
		}
		public IniciContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inici; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mainListener ) ((mainListener)listener).enterInici(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mainListener ) ((mainListener)listener).exitInici(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mainVisitor ) return ((mainVisitor<? extends T>)visitor).visitInici(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IniciContext inici() throws RecognitionException {
		IniciContext _localctx = new IniciContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inici);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TK_PC_CONSTANTS) {
				{
				setState(86);
				blocDeclaracioConstants();
				}
			}

			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TK_PC_TIPUS) {
				{
				setState(89);
				blocDeclaracioTipus();
				}
			}

			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(92);
				blocAccionsFuncions();
				}
				break;
			}
			setState(95);
			programa();
			setState(97);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(96);
				blocImplementacio();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlocDeclaracioConstantsContext extends ParserRuleContext {
		public TerminalNode TK_PC_CONSTANTS() { return getToken(mainParser.TK_PC_CONSTANTS, 0); }
		public TerminalNode TK_PC_FCONSTANTS() { return getToken(mainParser.TK_PC_FCONSTANTS, 0); }
		public List<VariableConstantsContext> variableConstants() {
			return getRuleContexts(VariableConstantsContext.class);
		}
		public VariableConstantsContext variableConstants(int i) {
			return getRuleContext(VariableConstantsContext.class,i);
		}
		public BlocDeclaracioConstantsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blocDeclaracioConstants; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mainListener ) ((mainListener)listener).enterBlocDeclaracioConstants(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mainListener ) ((mainListener)listener).exitBlocDeclaracioConstants(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mainVisitor ) return ((mainVisitor<? extends T>)visitor).visitBlocDeclaracioConstants(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlocDeclaracioConstantsContext blocDeclaracioConstants() throws RecognitionException {
		BlocDeclaracioConstantsContext _localctx = new BlocDeclaracioConstantsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_blocDeclaracioConstants);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(TK_PC_CONSTANTS);
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 63)) & ~0x3f) == 0 && ((1L << (_la - 63)) & ((1L << (TK_TB_ENTER - 63)) | (1L << (TK_TB_REAL - 63)) | (1L << (TK_TB_CAR - 63)) | (1L << (TK_TB_BOOLEA - 63)) | (1L << (TK_TB_DATA - 63)))) != 0)) {
				{
				{
				setState(100);
				variableConstants();
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(106);
			match(TK_PC_FCONSTANTS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableConstantsContext extends ParserRuleContext {
		public TipusBasicContext tipusBasic() {
			return getRuleContext(TipusBasicContext.class,0);
		}
		public TerminalNode TK_IDENT() { return getToken(mainParser.TK_IDENT, 0); }
		public TerminalNode TK_ASSIGNACIO() { return getToken(mainParser.TK_ASSIGNACIO, 0); }
		public ValorTipusBasicContext valorTipusBasic() {
			return getRuleContext(ValorTipusBasicContext.class,0);
		}
		public TerminalNode TK_SEMI() { return getToken(mainParser.TK_SEMI, 0); }
		public VariableConstantsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableConstants; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mainListener ) ((mainListener)listener).enterVariableConstants(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mainListener ) ((mainListener)listener).exitVariableConstants(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mainVisitor ) return ((mainVisitor<? extends T>)visitor).visitVariableConstants(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableConstantsContext variableConstants() throws RecognitionException {
		VariableConstantsContext _localctx = new VariableConstantsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variableConstants);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			tipusBasic();
			setState(109);
			match(TK_IDENT);
			setState(110);
			match(TK_ASSIGNACIO);
			setState(111);
			valorTipusBasic();
			setState(112);
			match(TK_SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipusBasicContext extends ParserRuleContext {
		public TerminalNode TK_TB_BOOLEA() { return getToken(mainParser.TK_TB_BOOLEA, 0); }
		public TerminalNode TK_TB_REAL() { return getToken(mainParser.TK_TB_REAL, 0); }
		public TerminalNode TK_TB_ENTER() { return getToken(mainParser.TK_TB_ENTER, 0); }
		public TerminalNode TK_TB_CAR() { return getToken(mainParser.TK_TB_CAR, 0); }
		public TerminalNode TK_TB_DATA() { return getToken(mainParser.TK_TB_DATA, 0); }
		public TipusBasicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipusBasic; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mainListener ) ((mainListener)listener).enterTipusBasic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mainListener ) ((mainListener)listener).exitTipusBasic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mainVisitor ) return ((mainVisitor<? extends T>)visitor).visitTipusBasic(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipusBasicContext tipusBasic() throws RecognitionException {
		TipusBasicContext _localctx = new TipusBasicContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tipusBasic);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_la = _input.LA(1);
			if ( !(((((_la - 63)) & ~0x3f) == 0 && ((1L << (_la - 63)) & ((1L << (TK_TB_ENTER - 63)) | (1L << (TK_TB_REAL - 63)) | (1L << (TK_TB_CAR - 63)) | (1L << (TK_TB_BOOLEA - 63)) | (1L << (TK_TB_DATA - 63)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValorTipusBasicContext extends ParserRuleContext {
		public TerminalNode TK_BOOLEA() { return getToken(mainParser.TK_BOOLEA, 0); }
		public TerminalNode TK_DATA() { return getToken(mainParser.TK_DATA, 0); }
		public ValorEnterContext valorEnter() {
			return getRuleContext(ValorEnterContext.class,0);
		}
		public TerminalNode TK_REAL() { return getToken(mainParser.TK_REAL, 0); }
		public TerminalNode TK_CAR() { return getToken(mainParser.TK_CAR, 0); }
		public ValorTipusBasicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valorTipusBasic; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mainListener ) ((mainListener)listener).enterValorTipusBasic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mainListener ) ((mainListener)listener).exitValorTipusBasic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mainVisitor ) return ((mainVisitor<? extends T>)visitor).visitValorTipusBasic(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValorTipusBasicContext valorTipusBasic() throws RecognitionException {
		ValorTipusBasicContext _localctx = new ValorTipusBasicContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_valorTipusBasic);
		try {
			setState(121);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TK_BOOLEA:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				match(TK_BOOLEA);
				}
				break;
			case TK_DATA:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				match(TK_DATA);
				}
				break;
			case TK_ZERO:
			case TK_ENTER:
				enterOuterAlt(_localctx, 3);
				{
				setState(118);
				valorEnter();
				}
				break;
			case TK_REAL:
				enterOuterAlt(_localctx, 4);
				{
				setState(119);
				match(TK_REAL);
				}
				break;
			case TK_CAR:
				enterOuterAlt(_localctx, 5);
				{
				setState(120);
				match(TK_CAR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValorEnterContext extends ParserRuleContext {
		public TerminalNode TK_ZERO() { return getToken(mainParser.TK_ZERO, 0); }
		public TerminalNode TK_ENTER() { return getToken(mainParser.TK_ENTER, 0); }
		public ValorEnterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valorEnter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mainListener ) ((mainListener)listener).enterValorEnter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mainListener ) ((mainListener)listener).exitValorEnter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mainVisitor ) return ((mainVisitor<? extends T>)visitor).visitValorEnter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValorEnterContext valorEnter() throws RecognitionException {
		ValorEnterContext _localctx = new ValorEnterContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_valorEnter);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_la = _input.LA(1);
			if ( !(_la==TK_ZERO || _la==TK_ENTER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlocDeclaracioTipusContext extends ParserRuleContext {
		public TerminalNode TK_PC_TIPUS() { return getToken(mainParser.TK_PC_TIPUS, 0); }
		public TerminalNode TK_PC_FTIPUS() { return getToken(mainParser.TK_PC_FTIPUS, 0); }
		public List<TipusContext> tipus() {
			return getRuleContexts(TipusContext.class);
		}
		public TipusContext tipus(int i) {
			return getRuleContext(TipusContext.class,i);
		}
		public BlocDeclaracioTipusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blocDeclaracioTipus; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mainListener ) ((mainListener)listener).enterBlocDeclaracioTipus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mainListener ) ((mainListener)listener).exitBlocDeclaracioTipus(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mainVisitor ) return ((mainVisitor<? extends T>)visitor).visitBlocDeclaracioTipus(this);
			else return visitor.visitChildren(this);
		}
	}
